<resources>
    <string name="app_name">Teacher Burnout Test</string>
    <string name="do_you_think_that_you_are_experiencing_nteacher_burnout">Do you think that you are experiencing  Teacher Burnout?</string>
    <string name="take_this_test_to_find_out">Take this test to find out</string>
    <string name="start">Start</string>
    <string name="please_enter_your_name">Please, enter your name</string>
    <string name="name">Name</string>
    <string name="please_take_a_moment_to_reflect_on_why_you_became_a_teacher">Please, take a moment to reflect on why you became a teacher.</string>
    <string name="why_i_wanted_to_be_a_teacher">Why I wanted to be a teacher</string>
    <string name="next">Next</string>
    <string name="are_you_having_negative_thoughts_about_being_a_teacher">Are you having negative thoughts about being a teacher?</string>
    <string name="yes_no_maybe">Yes/No/Maybe</string>
    <string name="check_all_that_apply">Check all that apply:</string>
    <string name="you_experience_insominia_more_than_a_couple_nights_a_week">You experience insominia more than a couple nights a week.</string>
    <string name="you_experience_change_of_appetite">You experience change of appetite.</string>
    <string name="you_are_experiencing_chronic_fatigue_or_exhaustion">You are experiencing chronic fatigue or exhaustion.</string>
    <string name="answer_the_following_questions">Answer the following questions:</string>
    <string name="do_you_feel_irritable_or_quick_to_anger">Do you feel irritable or quick to anger?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sometimes">Sometimes</string>
    <string name="are_you_avoiding_social_gathering">Are you avoiding social gathering?</string>
    <string name="do_you_find_yourself_complaining">Do you find yourself complaining?</string>
    <string name="are_you_having_difficuty_focusing">Are you having difficuty focusing?</string>
    <string name="see_your_results">See your results</string>
    <string name="read_more_about_your_results">Read more about your results</string>
    <string name="your_score">Your score</string>
    <string name="_3_5_no_burnout_not_enough_symptoms">3-5 No burnout - not enough symptoms</string>
    <string name="_5_9_you_might_be_getting_closer_to_burnout">5-9 You might be getting closer to burnout</string>
    <string name="_9_13_you_might_be_getting_closer_to_burnout">9-13 You might be getting closer to burnout</string>
    <string name="find_the_motivation_in_why_you_became_a_teacher">Find the motivation in why you became a teacher</string>
    <string name="read_more_about_teacher_burnout">Read more about Teacher Burnout</string>
    <string name="http_neatoday_org_2018_01_18_teacher_burnout_disillusionment">http://neatoday.org/2018/01/18/teacher-burnout-disillusionment/</string>
    <string name="https_www_psychologytoday_com_us_blog_much_more_common_core_201611_the_teacher_burnout_epidemic_part_1_2">https://www.psychologytoday.com/us/blog/much-more-common-core/201611/the-teacher-burnout-epidemic-part-1-2</string>
    <string name="https_www_teachthought_com_critical_thinking_the_warning_signs_of_teacher_burnout">https://www.teachthought.com/critical-thinking/the-warning-signs-of-teacher-burnout/</string>
    <string name="https_www_weareteachers_com_prevent_teacher_burnout">https://www.weareteachers.com/prevent-teacher-burnout/</string>
    <string name="some_signs_of_burnout">some signs of burnout</string>
    <string name="you_have_burnout">You have burnout!</string>
    <string name="no_burnout">No burnout</string>
</resources>
