<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center_horizontal"
        android:text="@string/please_enter_your_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/yourname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/name"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center_horizontal"
        android:text="@string/please_take_a_moment_to_reflect_on_why_you_became_a_teacher"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp" />

    <EditText
        android:id="@+id/purpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8dp"
        android:layout_marginTop="@dimen/_16dp"
        android:hint="@string/why_i_wanted_to_be_a_teacher"
        android:inputType="textMultiLine" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/whytobeateacher" />

    <Button
        android:id="@id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/next" />

</LinearLayout>