<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frustrated_teacher" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:gravity="center_horizontal"
        android:text="@string/do_you_think_that_you_are_experiencing_nteacher_burnout"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/take_this_test_to_find_out"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/start" />

</LinearLayout>